--- a/lol-wasm/Cargo.toml
+++ b/lol-wasm/Cargo.toml
@@ -16,4 +16,5 @@ clap = { version = "4.3.3", features = ["derive"]}
 wasm-bindgen = "0.2.86"
 serde = { version = "1.0.164" , features = ["derive"] }
 serde_json = "1.0.96"
+regex = "1.8.4"
 
