--- a/lol-wasm/extension/manifest.json
+++ b/lol-wasm/extension/manifest.json
@@ -3,9 +3,13 @@
   "name": "Platypul Lol",
   "description": "Smart bookmarking tool",
   "version": "0.0",
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
+  },
   "omnibox": { "keyword" : "p" },
   "background": {
-    "service_worker": "platypus.js"
+    "service_worker": "platypus.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "platypus.html",
