Plug in parser with hardcoded config

--- a/lol-wasm/wasm_lol/Cargo.toml
+++ b/lol-wasm/wasm_lol/Cargo.toml
@@ -10,7 +10,10 @@ name = "lol_wasm"
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
+lazy_static.workspace = true
 nfa.workspace = true
 redirect.workspace = true
 regex.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 wasm-bindgen.workspace = true
