--- a/lol-wasm/Cargo.toml
+++ b/lol-wasm/Cargo.toml
@@ -19,6 +19,7 @@ tool = { path = "tool" }
 wasm_lol = { path = "wasm_lol" }
 
 clap = { version = "4.3.3", features = ["derive"]}
+lazy_static = "1.4.0"
 regex = "1.8.4"
 serde_json = "1.0.96"
 serde = { version = "1.0.164" , features = ["derive"] }
