--- a/lol-wasm/Cargo.toml
+++ b/lol-wasm/Cargo.toml
@@ -22,4 +22,5 @@ clap = { version = "4.3.3", features = ["derive"]}
 regex = "1.8.4"
 serde_json = "1.0.96"
 serde = { version = "1.0.164" , features = ["derive"] }
+serde_path_to_error = "0.1.11"
 wasm-bindgen = "0.2.86"
