--- a/lol-wasm/wasm_lol/Cargo.toml
+++ b/lol-wasm/wasm_lol/Cargo.toml
@@ -15,4 +15,5 @@ redirect.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+serde_path_to_error.workspace = true
 wasm-bindgen.workspace = true
