Add dynamic reloading of the config

--- a/lol-wasm/Cargo.toml
+++ b/lol-wasm/Cargo.toml
@@ -25,6 +25,7 @@ clap = { version = "4.3.3", features = ["derive"]}
 html-builder = "0.5.1"
 hyper = { version = "0.14", features = ["full"]}
 lazy_static = "1.4.0"
+notify = { version = "6.0.1", default-features = false, features = ["macos_kqueue"] }
 serde_json = "1.0.96"
 serde = { version = "1.0.164" , features = ["derive"] }
 serde_path_to_error = "0.1.11"
