--- a/lol-wasm/server/Cargo.toml
+++ b/lol-wasm/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow.workspace = true
 html-builder.workspace = true
 nfa.workspace = true
+notify.workspace = true
 redirect.workspace = true
 serde.workspace = true
 serde_json.workspace = true
