--- a/lol-wasm/server/Cargo.toml
+++ b/lol-wasm/server/Cargo.toml
@@ -3,6 +3,11 @@ name = "server"
 version = "0.1.0"
 edition = "2021"
 
+
+[[bin]]
+name = "platypus-lol"
+path = "src/main.rs"
+
 [dependencies]
 anyhow.workspace = true
 html-builder.workspace = true
