--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 ---
 name: Platypul LOL CI 
 run-name: ${{ github.actor }} is testing ci🚀
-on: [push, pull-request]
+on: [push, pull_request]
 jobs:
   CI:
     runs-on: ubuntu-latest
