More targeted action

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,13 @@
 ---
-name: Platypul LOL CI 
+name: Platypul LOL CI
 run-name: ${{ github.actor }} is testing ci🚀
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   CI:
     runs-on: ubuntu-latest
