--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 ---
 name: Platypul LOL CI
-run-name: ${{ github.actor }} is testing ci🚀
+run-name: ${{ github.actor }} is running CI🚀
 on:
   push:
     branches:
@@ -16,4 +16,5 @@ jobs:
         uses: actions/checkout@v3
       - run: make ci
       - run: git diff --exit-code
+      - run: make wasm
       - run: echo "🍏 This job's status is ${{ job.status }}."
