--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,5 +16,6 @@ jobs:
         uses: actions/checkout@v3
       - run: make ci
       - run: git diff --exit-code
+      - run: cargo install wasm-pack
       - run: make wasm
       - run: echo "🍏 This job's status is ${{ job.status }}."
