--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v3
       - run: make ci
       - run: git diff --exit-code
-      - run: cargo install wasm-pack
+      - uses: jetli/wasm-pack-action@v0.4.0
+        with:
+          version: 'latest'
       - run: make wasm
       - run: echo "🍏 This job's status is ${{ job.status }}."
