--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow.workspace = true
+futures-util.workspace = true
 html-builder.workspace = true
 nfa.workspace = true
 notify.workspace = true
