Use anyhow for errors instead of string error

--- a/nfa/Cargo.toml
+++ b/nfa/Cargo.toml
@@ -8,4 +8,5 @@ name = "nfa"
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-itertools = "0.12.0"
+itertools.workspace = true
+anyhow.workspace = true
