--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ clap = { version = "4.3.3", features = ["derive"]}
 futures-util = "0.3.28"
 html-builder = "0.5.1"
 hyper = { version = "0.14", features = ["full"]}
+itertools = "0.12.0"
 lazy_static = "1.4.0"
 notify = { version = "6.0.1", default-features = false, features = ["macos_kqueue"] }
 serde_json = "1.0.96"
