--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ notify.workspace = true
 redirect.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+web-redirector.workspace = true
 hyper.workspace = true
 tokio.workspace = true
 clap.workspace = true
