--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 
 resolver = "2"
 members = [
+  "cf-http-worker",
   "nfa",
   "redirect",
-  "tool",
   "server",
+  "tool",
   "web-redirector",
 ]
 
@@ -14,6 +15,7 @@ edition = "2021"
 version = "0.0.0"
 
 [workspace.dependencies]
+cf-http-worker = { path="cf-http-worker" }
 nfa = { path="nfa" }
 redirect = { path = "redirect" }
 tool = { path = "tool" }
@@ -22,6 +24,7 @@ server = { path = "server" }
 
 anyhow = "1.0.95"
 clap = { version = "4.5.23", features = ["derive"]}
+console_error_panic_hook = { version = "0.1.1" }
 futures-util = "0.3.31"
 html-builder = "0.5.1"
 http = "1.1"
@@ -31,8 +34,10 @@ hyper-util = { version = "0.1", features = ["full"]}
 itertools = "0.13.0"
 lazy_static = "1.5.0"
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
-serde_json = "1.0.134"
 serde = { version = "1.0.216" , features = ["derive"] }
+serde_json = "1.0.133"
 serde_path_to_error = "0.1.11"
 tokio = { version = "1.42.0", features = ["full"]}
 url = "2.5.4"
+worker-macros = { version="0.5.0", features=['http'] }
+worker = { version="0.5.0", features=['http'] }
