--- a/cf-http-worker/Cargo.toml
+++ b/cf-http-worker/Cargo.toml
@@ -15,6 +15,12 @@ wasm-opt = false
 crate-type = ["cdylib"]
 
 [dependencies]
+nfa.workspace = true
+redirect.workspace = true
+web-redirector.workspace = true
+
+anyhow.workspace = true
+url.workspace = true
 worker.workspace = true
 worker-macros.workspace = true
 console_error_panic_hook.workspace = true
