--- a/cf-http-worker/Cargo.toml
+++ b/cf-http-worker/Cargo.toml
@@ -20,6 +20,7 @@ redirect.workspace = true
 web-redirector.workspace = true
 
 anyhow.workspace = true
+lazy_static.workspace = true
 url.workspace = true
 worker.workspace = true
 worker-macros.workspace = true
